--- a/pharmacy_sales_system/frontend/angular.json
+++ b/pharmacy_sales_system/frontend/angular.json
@@ -35,7 +35,7 @@
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kB",
+                  "maximumWarning": "1.5mb",
                   "maximumError": "1MB"
                 },
                 {
