--- a/pharmacy_sales_system/frontend/angular.json
+++ b/pharmacy_sales_system/frontend/angular.json
@@ -28,6 +28,13 @@
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "node_modules/bootstrap-icons/font/bootstrap-icons.css"
+            ],
+            "allowedCommonJsDependencies": [
+              "core-js",
+              "canvg",
+              "raf",
+              "rgbcolor",
+              "html2canvas"
             ]
           },
           "configurations": {
@@ -78,7 +85,7 @@
             ],
             "tsConfig": "tsconfig.spec.json",
             "assets": [
-              {
+             {
                 "glob": "**/*",
                 "input": "public"
               }
